<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BookFinder</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Save">Save Book</string>
    <string name="List">My Lists</string>
    <string name="textView1">Title:</string>
    <string name="textView2">Author:</string>
    <string name="textView3">Version:</string>
    <string name="textView4">Location</string>
    <string name="textView5">Level:</string>
    <string name="textView6">Section:</string>
    <string name="textView7">Shelve:</string>
    <string name="textView8">Book No:</string>
    <string name="button1">Share Book</string>
    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="title_activity_book_main">Book_main</string>

    <string name="title_activity_nfcbeam">NFCBeam</string>
	<string name="nfcbeam">NFC Beam</string>


    <string-array name="titles">
        <item>Mylist1</item>
        <item>Mylist2</item>
        <item>mylist3</item>
    </string-array>

    <array name="icons">
        <item>@drawable/fb</item>
        <item>@drawable/fb</item>
        <item>@drawable/fb</item>
    </array>

</resources>
