<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:screenOrientation="portrait"
        android:fadeScrollbars="false">
<RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.bookfinder.Details_page" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/textView5"
        android:layout_marginTop="5dp"
        android:text="@string/textView1"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="15dp" />

     <Button
         android:id="@+id/button1"
         android:layout_width="370dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView8"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="28dp"
         android:background="@drawable/apptheme_btn_default_normal_holo_light"
         android:onClick="share"
         android:text="@string/button1" />

     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/textView3"
         android:layout_below="@+id/textView1"
         android:layout_marginTop="20dp"
         android:paddingTop="15dp"
         android:text="@string/textView2"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textSize="15dp" />

     <TextView
         android:id="@+id/textView9"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/textView1"
         android:layout_below="@+id/textView1"
         android:text="Book Title"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="#33B5E5"
         android:textSize="20dp" />

     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/textView4"
         android:layout_below="@+id/textView2"
         android:layout_marginTop="18dp"
         android:paddingTop="15dp"
         android:text="@string/textView3"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textSize="15dp" />

     <TextView
         android:id="@+id/textView10"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/textView2"
         android:layout_below="@+id/textView2"
         android:text="Author Name"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="#33B5E5"
         android:textSize="20dp" />

     <TextView
         android:id="@+id/textView11"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignRight="@+id/button1"
         android:layout_below="@+id/textView3"
         android:text="Version Number"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="#33B5E5"
         android:textSize="20dp" />

     <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/textView5"
         android:layout_below="@+id/textView11"
         android:paddingTop="15dp"
         android:text="@string/textView4"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textSize="18dp" />

     <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/textView6"
         android:layout_below="@+id/textView4"
         android:paddingTop="15dp"
         android:text="@string/textView5"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textSize="15dp" />

     <TextView
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/textView7"
         android:layout_below="@+id/textView5"
         android:layout_marginTop="18dp"
         android:paddingTop="15dp"
         android:text="@string/textView6"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textSize="15dp" />

     <TextView
         android:id="@+id/textView12"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/textView6"
         android:layout_below="@+id/textView5"
         android:text="Upper Level"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="#33B5E5"
         android:textSize="20dp" />

     <TextView
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/textView8"
         android:layout_below="@+id/textView6"
         android:layout_marginTop="19dp"
         android:paddingTop="15dp"
         android:text="@string/textView7"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textSize="15dp" />

     <TextView
         android:id="@+id/textView13"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/textView7"
         android:layout_below="@+id/textView6"
         android:text="Section Number"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="#33B5E5"
         android:textSize="20dp" />

     <TextView
         android:id="@+id/textView8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/textView14"
         android:layout_below="@+id/textView7"
         android:layout_marginTop="24dp"
         android:paddingTop="15dp"
         android:text="@string/textView8"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textSize="15dp" />

     <TextView
         android:id="@+id/textView14"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignRight="@+id/button1"
         android:layout_below="@+id/textView7"
         android:text="Shelve Number"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="#33B5E5"
         android:textSize="20dp" />

     <TextView
         android:id="@+id/textView15"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/textView8"
         android:layout_below="@+id/textView8"
         android:text="Book Number"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="#33B5E5"
         android:textSize="20dp" />

</RelativeLayout>
</ScrollView>